# actix-web-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-image.yml
src/: main.rs
src/db/: mod.rs
src/db/models/: user.rs
src/middleware/: authentication.rs  mod.rs  roles.rs  validator.rs
src/router/: user.rs
src/utils/: common.rs  constant.rs  error.rs  mod.rs
