[package]
name = "actix-web-template"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0" # https://github.com/actix/actix-web
derive_more = "0.99.17"
futures-util = "0.3.29"
jsonwebtoken = "9.1.0" # https://github.com/Keats/jsonwebtoken
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.7.1"
actix-files = "0.6.2"
serde_json = "1.0.108"
env_logger = "0.10.1"
